Fix spacing between books in Catalog section for default screen size

--- a/src/components/BookCollection/BookCollection.css
+++ b/src/components/BookCollection/BookCollection.css
@@ -5,7 +5,7 @@
 
 .all-books {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(204px, 206.6px));
+  grid-template-columns: repeat(auto-fit, minmax(204px, 14.2em));
   column-gap: 1vw;
   row-gap: 2vw;
   flex-direction: column;
